fix header gap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,6 +35,7 @@ a {
 header {
   background: #fff;
   box-shadow: 0 1px 3px rgb(0 0 0 / 0.1);
+  margin-bottom: 3rem;
 }
 
 header .container {
@@ -69,7 +70,7 @@ nav {
 /* Main */
 
 main {
-  margin-top: 3rem;
+  padding-top: 3rem;
   padding-bottom: 3rem;
 }
 
